--- a/app/views/ecommerce/vendor_confirmations/show.haml
+++ b/app/views/ecommerce/vendor_confirmations/show.haml
@@ -1,31 +1,32 @@
-.row
-  .col-sm-6
-    Order: #{@purchase_order.order_number}
+.container
+  .row
+    .col-sm-12
+      Order: #{@purchase_order.order_number}
 
-    = render "order_details"
+      = render "order_details"
 
-    = simple_form_for @purchase_order, url: url_for, method: :put do |f|
-      = f.input :vendor_acknowledgement_status, collection: [ ['I have all products and will ship them to the customer', PurchaseOrder::FULFILL], ['I cannot fulfill this order', PurchaseOrder::DO_NOT_FULFILL] ]
+      = simple_form_for @purchase_order, url: url_for, method: :put do |f|
+        = f.input :vendor_acknowledgement_status, collection: [ ['I have all products and will ship them to the customer', PurchaseOrder::FULFILL], ['I cannot fulfill this order', PurchaseOrder::DO_NOT_FULFILL] ]
 
-      = f.input :vendor_acknowledgement_reason, collection: PurchaseOrder::NO_FULFILL_REASONS
-      SELECT2 needed: Can fill in something else if desired.
+        = f.input :vendor_acknowledgement_reason, collection: PurchaseOrder::NO_FULFILL_REASONS
+        SELECT2 needed: Can fill in something else if desired.
 
-      = f.submit
-      = content_for :page_js do
-        :javascript
-          $('document').ready(function() {
-            function update_form() {
-              var value =  $('#purchase_order_vendor_acknowledgement_status')[0].value;
+        = f.submit
+        = content_for :page_js do
+          :javascript
+            $('document').ready(function() {
+              function update_form() {
+                var value =  $('#purchase_order_vendor_acknowledgement_status')[0].value;
 
-              if ( value === 'true' ) {
-                $('.purchase_order_vendor_acknowledgement_reason').hide();
-              } else {
-                $('.purchase_order_vendor_acknowledgement_reason').show();
+                if ( value === 'true' ) {
+                  $('.purchase_order_vendor_acknowledgement_reason').hide();
+                } else {
+                  $('.purchase_order_vendor_acknowledgement_reason').show();
+                }
               }
-            }
 
-            update_form();
-            $('#purchase_order_vendor_acknowledgement_status').change(function(e) {
               update_form();
+              $('#purchase_order_vendor_acknowledgement_status').change(function(e) {
+                update_form();
+              });
             });
-          });
