--- a/app/views/ecommerce/vendor_confirmations/error.haml
+++ b/app/views/ecommerce/vendor_confirmations/error.haml
@@ -1,5 +1,8 @@
-%h2 Sorry
+.container
+  .row
+    .col-xs-12
+      %h2 Sorry
 
-%p
-  We could not match that request to a vendor or order.  Please contact Wrapt
-  support for help.
+      %p
+        We could not match that request to a vendor or order.  Please contact Wrapt
+        support for help.
