edit address interactions in progress

--- a/app/views/ecommerce/checkout/edit_address.haml
+++ b/app/views/ecommerce/checkout/edit_address.haml
@@ -7,19 +7,34 @@
         = simple_form_for @customer_order, url: url_for, method: :patch do |f|
           .co-toggle
             = psuedo_wrapt_radio_toggle([['Ship to me', :ship_to_me], ["Ship to #{@profile.name}", :ship_to_giftee]], :toggle_address_choice, :ship_to_me)
-          .row
-            .col-xs-12.col-md-10
-              = f.input :ship_street1, label: 'Street Address'
-            .col-xs-12.col-md-2
-              = f.input :ship_street2, label: 'Apt / Suite #'
-          .row
-            .col-xs-12.col-md-8
-              = f.input :ship_city, label: 'City'
-            .col-xs-12.col-md-2
-              = f.input :ship_state, label: 'State'
-            .col-xs-12.col-md-2
-              = f.input :ship_zip, label: 'Zip Code'
+          .j-select-my-address.form-group
+            %h4.light Select Address
+            -# TODO saved addresses
+            %label
+              = radio_button_tag :saved_address, 'new_address'
+              New Address
+          .j-address{style: 'display:none;'}
+            .row
+              .col-xs-12.col-md-10
+                = f.input :ship_street1, label: 'Street Address'
+              .col-xs-12.col-md-2
+                = f.input :ship_street2, label: 'Apt / Suite #'
+            .row
+              .col-xs-12.col-md-8
+                = f.input :ship_city, label: 'City'
+              .col-xs-12.col-md-2
+                = f.input :ship_state, label: 'State'
+              .col-xs-12.col-md-2
+                = f.input :ship_zip, label: 'Zip Code'
           %button.btn.btn-primary{type: 'submit'}
             = "Next <svg class='btn__icon-caret-right'><use xlink:href='#icon-caret-right'></use></svg>".html_safe
 
   = render "debug", customer_order: @customer_order
+
+- content_for :page_js do
+  :javascript
+    $(document).ready(function() {
+      App.SelectAddressVisibilityBehavior('', 'toggle_address_choice', 'ship_to_me', '.j-select-my-address', true)
+
+      App.SelectAddressVisibilityBehavior('', 'saved_address', 'new_address', '.j-address', true)
+    })
