--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -15,9 +15,7 @@
               %ul
                 - test_surveys.each do |test_survey|
                   %li= link_to test_survey.title, new_profile_path(survey_id: test_survey.id)
-        - elsif current_user.present?
-          = link_to 'Start a New Quiz', new_profile_path
-        - elsif require_invites?
+        - elsif require_invites? && current_user.blank?
           .sqr-progress.sqr-progress--one-question-only
           = simple_form_for @invitation_request, html: {class: 'sqr-form new-invite-request'} do |form|
             .form-inputs
@@ -29,8 +27,6 @@
             .clearfix
         - else
           = simple_form_for @question_response, url: create_with_auto_user_create_profiles_path, html: {data: {behavior: 'question-response-form'}, class: 'sqr-form'} do |form|
-            - if current_user&.admin?
-              = hidden_field_tag :survey_id, @survey.id
             = render response_fields_partial, form: form, label: @question_response.survey_question.prompt
 
 - content_for :after_wrapper do
