[#151738547][#151738458] UI fixes related to failing to validate user

--- a/app/views/survey_response_completions/show.haml
+++ b/app/views/survey_response_completions/show.haml
@@ -22,9 +22,8 @@
 
           = form.submit 'View Gift Recommendations'.upcase, class: 'btn btn-primary btn-sm btn-full-width'
 
-= render 'application/loading'
+- if @render_loading_spinner
+  = render 'application/loading'
 = content_for :page_js do
   :javascript
-    new App.PasswordRevealer() 
-
-
+    new App.PasswordRevealer()
