--- a/app/views/ecommerce/checkout/edit_shipping.haml
+++ b/app/views/ecommerce/checkout/edit_shipping.haml
@@ -6,7 +6,9 @@
         %h2.light Shipping Information
 
         = simple_form_for @customer_order, url: url_for, method: :patch do |f|
-          = f.input :shipping_choice, as: :radio_buttons, collection: @shipping_choices, label_method: :annotated_label, value_method: :value
+          .co-select-shipping.clearfix
+            = f.input :shipping_choice, as: :wrapt_styled_radio_buttons, collection: @shipping_choices.map{|sc| [sc.annotated_label, sc.value]}, label: false
+
           %button.btn.btn-primary{type: 'submit'}
             = "Next <svg class='btn__icon-caret-right'><use xlink:href='#icon-caret-right'></use></svg>".html_safe
 
