--- a/app/views/ecommerce/checkout/edit_gift_wrapt.haml
+++ b/app/views/ecommerce/checkout/edit_gift_wrapt.haml
@@ -28,6 +28,6 @@
 - content_for :page_js do
   :javascript
     $(document).ready(function() {
-      App.NoteBehavior('customer_order', 'gift_wrapt', 'true', '.j-co-gift-wrapt__note-1', true)
-      App.NoteBehavior('customer_order', 'include_note', '0', '.j-co-gift-wrapt__note-2', false)
+      App.NoteBehavior('customer_order', 'gift_wrapt', 'true', true, '.j-co-gift-wrapt__note-1')
+      App.NoteBehavior('customer_order', 'include_note', '0', false, '.j-co-gift-wrapt__note-2')
     })
