Better behavior if can't view vendor confirmation page

--- a/app/views/ecommerce/vendor_confirmations/error.haml
+++ b/app/views/ecommerce/vendor_confirmations/error.haml
@@ -4,5 +4,5 @@
       %h2 Sorry
 
       %p
-        We could not match that request to a vendor or order.  Please contact Wrapt
-        support for help.
+        We could not match that request to a vendor or order that can be
+        viewed.  Please contact Wrapt support for help.
