--- a/app/views/static_pages/science_of_gifting.html.haml
+++ b/app/views/static_pages/science_of_gifting.html.haml
@@ -39,9 +39,14 @@
         .row
           .col-xs-12.col-sm-10.col-sm-offset-1
             .sg-question
-              = simple_form_for @question_response, url: profiles_path, html: {data: {behavior: 'question-response-form'}, class: 'sqr-form'} do |form|
-                - if current_user&.admin?
-                  = hidden_field_tag :survey_id, @survey.id
-                = render response_fields_partial, form: form, label: @question_response.survey_question.prompt
+              - if require_invites? && current_user.blank?
+                = render "shared/invitation_request"
+              - else
+                - url = current_user.present? ? profiles_path : create_with_auto_user_create_profiles_path
+                = simple_form_for @question_response, url: url, html: {data: {behavior: 'question-response-form'}, class: 'sqr-form'} do |form|
+                  - if current_user&.admin?
+                    = hidden_field_tag :survey_id, @survey.id
+                  = render response_fields_partial, form: form, label: @question_response.survey_question.prompt
         .text-center
           = embedded_svg('icon-gift-better-gift-wrapt', class: "landing-bottom__icon-gift-better-gift-wrapt mt6")
+
