--- a/app/views/admin/single_product_gifts/new.haml
+++ b/app/views/admin/single_product_gifts/new.haml
@@ -1,11 +1,26 @@
 %h2 Creating a Gift from #{@product.title}
 
-= simple_form_for  [:admin, @gift], url: admin_product_single_product_gift_path(@product, context_params), html: {data: {submits_to_pjax_modal: true}} do |form|
+%p
+  If the underlying product has missing data, the gift creation here will fail.
 
+= simple_form_for  [:admin, @gift], url: admin_product_single_product_gift_path(@product, context_params), html: { data: {submits_to_pjax_modal: true, behavior: 'form-loads-subcategories'} } do |form|
   .form-inputs
-    = form.association :product_category, disabled: true
-    = form.association :product_subcategory, collection: Gift.default_product_category.children
+    = form.association :product_category, as: :select, collection: ProductCategory.categories, input_html: {data: {behavior: 'product-category-input'}}
+    = form.association :product_subcategory, as: :select, collection: @sub_categories,  input_html: {data: {behavior: 'product-subcategory-input'}}
+
+    = form.fields_for :pretty_parcels do |gp|
+      = gp.input :id, as: :hidden
+      = gp.input :parcel_id, collection: Parcel.active.pretty.all, value_method: :id, label_method: :description, input_html: {}, label: 'Gift Box'
+      = gp.input :gift_id, as: :hidden, value: @gift.id
+
+    = form.fields_for :shipping_parcels do |gp|
+      = gp.input :id, as: :hidden
+      = gp.input :parcel_id, collection: Parcel.active.shipping.all, value_method: :id, label_method: :description, input_html: {}, label: 'Shipping Box'
+      = gp.input :gift_id, as: :hidden, value: @gift.id
 
   .form-actions.pull-right
     %a.btn.btn-default(pjax-modal-close) Cancel
     = form.submit 'Save', class: 'btn btn-primary'
+
+:javascript
+  new App.Admin.ProductSubcategoryLoader({formSelector: '#new_gift'});
