--- a/app/views/ecommerce/vendor_confirmations/show.haml
+++ b/app/views/ecommerce/vendor_confirmations/show.haml
@@ -1,16 +1,35 @@
 .container
-  .row
-    = simple_form_for @purchase_order, url: url_for, method: :put do |f|
+  = simple_form_for @purchase_order, url: url_for, method: :put do |f|
+    .row
       .col-sm-5
         = f.input :vendor_acknowledgement_status, collection: [ ['I have all products and will ship them to the customer', PurchaseOrder::FULFILL], ['I cannot fulfill this order', PurchaseOrder::DO_NOT_FULFILL] ], label: 'Status'
 
       .col-sm-5
         = f.input :vendor_acknowledgement_reason, collection: PurchaseOrder::NO_FULFILL_REASONS
-        -#SELECT2 needed: Can fill in something else if desired.
 
       .col-sm-2
         &nbsp;
         %button.btn.btn-sm.btn-warning Acknowledge
+
+    .row#js-other-reason{style: 'display: none; margin-bottom: 25px'}
+      .col-sm-10
+        .controls
+          %label.control-label
+            Other Reason
+          %input.form-control{name: 'purchase_order[other_reason]'}
+
+        = content_for :page_js do
+          :javascript
+            $('document').ready(function() {
+              $('#purchase_order_vendor_acknowledgement_reason').change(function(){
+                if ( $(this).val() == 'other' ) {
+                  $('#js-other-reason').show();
+                } else {
+                  $('#js-other-reason').hide();
+                }
+              });
+            })
+
 
   .row
     .col-sm-12
