add ability to tab over custom inputs, add behavior for same address

--- a/app/assets/stylesheets/modules/_checkout.scss
+++ b/app/assets/stylesheets/modules/_checkout.scss
@@ -71,7 +71,8 @@
 .co-select-shipping {
   label {
     width: 33%;
-    margin-right: 40px;
+    padding-right: 40px;
+    margin-bottom: 40px;
     float: left;
     @include akkurat-light;
   }
