--- a/app/views/ecommerce/checkout/edit_address.haml
+++ b/app/views/ecommerce/checkout/edit_address.haml
@@ -12,8 +12,8 @@
             - @saved_addresses.each_with_index do |address, index|
               - street2 = address.street2.present? ? "</br>#{address.street2}" : ""
               - label = "#{address.street1} #{street2} </br> #{address.city}, #{address.state} #{address.zip}"
-              - input_data = {ship_street1: address.street1, ship_street2: address.street2, ship_city: address.city, ship_state: address.state, ship_zip: address.zip, behavior: 'fill_form'}
-              = wrapt_styled_radio_button(address.id, :saved_address, index==0, {label: label, data: input_data})
+              -# input_data = {ship_street1: address.street1, ship_street2: address.street2, ship_city: address.city, ship_state: address.state, ship_zip: address.zip, behavior: 'fill_form'}
+              = wrapt_styled_radio_button(address.id, :saved_address, index==0, {label: label})
             = wrapt_styled_radio_button('new_address', :saved_address, !@saved_addresses.any?, {label: 'New Address'})
           .j-address{style: (@saved_addresses.any? ? 'display:none;' : '')}
             .row
@@ -42,12 +42,12 @@
 
       App.ShowAddressForm('', 'saved_address', 'new_address', true, '.j-address', '#saved_address_new_address')
 
-      var input_names = [
-        'ship_street1',
-        'ship_street2',
-        'ship_city',
-        'ship_state',
-        'ship_zip'
-      ]
-      App.FillAddressFormWithSavedAddress('customer_order', input_names, '[name="saved_address"]', '[name="toggle_address_choice"]')
+      //var input_names = [
+        //'ship_street1',
+        //'ship_street2',
+        //'ship_city',
+        //'ship_state',
+        //'ship_zip'
+      //]
+      //App.FillAddressFormWithSavedAddress('customer_order', input_names, '[name="saved_address"]', '[name="toggle_address_choice"]')
     })
