--- a/app/views/ecommerce/checkout/edit_review.haml
+++ b/app/views/ecommerce/checkout/edit_review.haml
@@ -1,7 +1,12 @@
-Review.
+.container
+  = render 'header'
+  .row
+    .col-xs-12.col-md-10.col-md-offset-1
+      .co-container
+        %h3.light Review Order
 
-= simple_form_for @customer_order, url: url_for, method: :patch do |f|
-  %button.btn.btn-primary{type: 'submit'}
-    = "Finalize Order<svg class='btn__icon-caret-right'><use xlink:href='#icon-caret-right'></use></svg>".html_safe
+        = simple_form_for @customer_order, url: url_for, method: :patch do |f|
+          %button.btn.btn-primary{type: 'submit'}
+            = "Finalize Order<svg class='btn__icon-caret-right'><use xlink:href='#icon-caret-right'></use></svg>".html_safe
 
 = render "debug", customer_order: @customer_order
