My accounts controllers/routes. Orders index page mostly complete (backend).

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -30,6 +30,8 @@
         -# .container.container--main
         = render 'layouts/alerts'
         = render 'breadcrumbs'
+        - if @show_account_sub_nav
+          = render 'my_account/sub_nav'
         = yield
     = yield :after_wrapper
 
